# pnp

./: .gitignore  .sessmonignore  CHANGELOG.md  ERROR_HANDLING_TASKLIST.md  Makefile  README.md  TASKLIST.md  pyproject.toml  requirements.txt
.github/workflows/: contract-gates.yml  cross-platform-validation.yml  nightly-stress.yml
docs/: CONTRIBUTING_ERROR_CODES.md  ERROR_CODES.md  ERROR_CODE_MIGRATION_TEMPLATE.md  ERROR_ENVELOPE.md  HANDOFF.md  JSON_CONTRACTS.md  OPERATOR_RUNBOOK.md  SLOS.md  error_code_lock.json  release-notes-template.md  schema_lock.json
pnp/: __init__.py  _constants.py  audit.py  cli.py  cli_helpers.py  commit_gen.py  config.py  debug_report.py  error_model.py  github.py  gitutils.py  health.py  help_menu.py  ops.py  project_adapters.py  remediation_policy.py  resolver.py  resolver_classifier.py  resolver_policy.py  telemetry.py  tui.py  utils.py  workflow_engine.py  workflows.py
pnp/handlers/: giterr.py
tests/: _gitfixture.py  test_audit_adapter_toolchain.py  test_audit_metadata.py  test_cli_smoke.py  test_commit_gen.py  test_config_layering.py  test_error_code_gate.py  test_fault_injection_harness.py  test_fault_injection_stress.py  test_github_integration.py  test_gitutils_core.py  test_gitutils_integration.py  test_json_contracts.py  test_ops_editor_matrix.py  test_ops_rollback.py  test_orchestrator_sequences.py  test_phase1_regressions.py  test_project_adapters.py  test_remediation_policy.py  test_resolver_classifier_golden.py  test_resolver_remediation.py  test_resolver_taxonomy.py  test_runtime_error_envelope.py  test_slo_report.py  test_telemetry.py  test_utils_core.py  test_workflow_integration.py
tests/fixtures/: resolver_classifier_golden.json  resolver_classifier_snapshot_v1.json
tools/: error_code_gate.py  flake_stress_gate.py  schema_gate.py  slo_report.py
