[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-pnp"
version = "2.3.0"
description = "A robust Python CLI tool to manage Git workflows with intelligent commit, push, tagging, changelog generation, GitHub releases, hook execution, and error handling."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["requests>=2.32.5", "tuikit>=0.2.5", "rich>=13.7.0", "tomli>=2.0.1; python_version < '3.11'"]

keywords = [
  "git",
  "automation",
  "cli",
  "release",
  "devops",
  "python"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Version Control :: Git"
]

[project.scripts]
pnp = "pnp.__main__:main"
git-pnp = "pnp.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/2kDarki/pnp"
Documentation = "https://github.com/2kDarki/pnp#readme"
Repository = "https://github.com/2kDarki/pnp"
Issues = "https://github.com/2kDarki/pnp/issues"

[project.optional-dependencies]
dev = ["drace", "build", "twine", "mypy", "types-requests"]

[tool.setuptools.package-data]
pnp = ["py.typed"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true
pretty = true
files = [
  "pnp/__init__.py",
  "pnp/__main__.py",
  "pnp/_constants.py",
  "pnp/cli.py",
  "pnp/github.py",
  "pnp/gitutils.py",
  "pnp/utils.py",
  "pnp/tui.py",
  "pnp/help_menu.py",
  "pnp/config.py",
  "pnp/resolver.py",
]
disallow_untyped_defs = true
